force-app/src/objects/c2g__CurrencyRevaluationCriteriaLineItem__c.object
<CustomObject>
    <description>Stores currency revaluation criteria information for generating documents for different companies.</description>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the company that the currency revaluation process will run for.</description>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluation Criteria Line Items</relationshipLabel>
        <relationshipName>Currency_Revaluation_Criteria_Line_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyRevaluationCriteria__c</fullName>
        <label>Currency Revaluation Criteria</label>
        <referenceTo>c2g__CurrencyRevaluationCriteria__c</referenceTo>
        <relationshipLabel>Currency Revaluation Criteria Line Items</relationshipLabel>
        <relationshipName>CurrencyRevaluationCriteriaLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the record is marked as deleted.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCurrency__c</fullName>
        <description>Stores currency code to which document will be converted after Revaluation or Translation.</description>
        <label>Destination Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentType__c</fullName>
        <description>Stores document type. For example Revaluation and Translation.</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revaluation</fullName>
                </value>
                <value>
                    <fullName>Translation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ExchangeRate__c</fullName>
        <description>Stores exchange rate from ERP which will be used in Revaluation or Translation.</description>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SourceCurrency__c</fullName>
        <description>Stores currency code on which Revaluation or Translation is being done.</description>
        <label>Source Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <description>Stores CRV process status for respective company. For example Pending, Complete and so on..</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Generating</fullName>
                </value>
                <value>
                    <fullName>Generation Error</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Posting</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Posting Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Currency Revaluation Criteria Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Currency Revaluation Criteria Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluation Criteria Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>